# aurora

./: .gitignore  BRIEF.md  CLAUDE.md  README.md  pyproject.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
doc/: README.md  memory.md  model.md  retrieval.md
scripts/: bench_iterative_retrieval.py
src/aurora/: __init__.py
tests/chat/: test_history.py  test_session.py  test_session_turn_tracking.py
tests/cli/: test_ask_command.py  test_chat_command.py  test_chat_memory_save.py  test_config_show.py  test_doctor.py  test_entrypoint.py  test_kb_command.py  test_memory_command.py  test_model_command.py  test_setup_wizard.py  test_status_command.py
tests/integration/: conftest.py  test_kb_qmd_integration.py
tests/kb/: test_contracts.py  test_delta.py  test_kb_lock.py  test_kb_scheduler.py  test_manifest.py  test_preprocess.py  test_qmd_adapter.py  test_qmd_backend.py  test_scanner.py  test_scope.py
tests/llm/: test_llm_service.py  test_prompts.py  test_service_reformulate_judge.py  test_streaming.py
tests/memory/: conftest.py  test_store.py  test_summarizer.py
(+330 files in other folders)
