[project]
name = "aurora"
version = "0.1.0"
description = "Aurora local runtime baseline"
readme = "BRIEF.md"
requires-python = ">=3.13"
dependencies = [
  "platformdirs>=4.3.8",
  "pydantic-settings>=2.10.1",
  "pytest>=8.4.2",
  "typer>=0.16.0",
]

[project.scripts]
aurora = "aurora.cli.app:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: marks tests that exercise real qmd integration flows",
]
